-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 14
-
Component/s: hotspot
-
b27
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8236311 | 15 | Roland Westrelin | P2 | Resolved | Fixed | team |
* Symptom
```
STDERR:
java.lang.IllegalStateException: Values mismatch after swaps
at TestUnsafeOffheapSwap.test(TestUnsafeOffheapSwap.java:83)
at TestUnsafeOffheapSwap.main(TestUnsafeOffheapSwap.java:56)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:832)
JavaTest Message: Test threw exception: java.lang.IllegalStateException: Values mismatch after swaps
JavaTest Message: shutting down test
```
```
STDERR:
java.lang.IllegalStateException: Values mismatch after swaps
at TestUnsafeOffheapSwap.test(TestUnsafeOffheapSwap.java:83)
at TestUnsafeOffheapSwap.main(TestUnsafeOffheapSwap.java:56)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:832)
JavaTest Message: Test threw exception: java.lang.IllegalStateException: Values mismatch after swaps
JavaTest Message: shutting down test
```
- backported by
-
JDK-8236311 gc/shenandoah/compiler/TestUnsafeOffheapSwap.java fails after JDK-8226411
-
- Resolved
-
- relates to
-
JDK-8226411 C2: Avoid memory barriers around off-heap unsafe accesses
-
- Resolved
-