8235636: gc/shenandoah/compiler/TestUnsafeOffheapSwap.java fails after JDK-8226411

Reviewed-by: rkennke